package onThiCuoiKy.observer.CA6;

public interface IListenerObserver {
    public void listen(PlayerData data);
}
